# zpdf

./: .gitattributes  .gitignore  AUDIT_IMPLEMENTATION_STATUS.md  CLAUDE.md  Cargo.toml  DESIGN.md  LICENSE  PHASE3_PLAN.md  README.md  ROADMAP.md  SECURITY_AUDIT_2026_07_10.md  SECURITY_AUDIT_ACTION_PLAN.md  STATUS.md  fix_filters.patch
.githooks/: README.md  pre-commit
.github/workflows/: ci.yml  fuzz.yml  publish.yml  release.yml
crates/zpdf/: Cargo.toml
crates/zpdf-cli/: Cargo.toml
crates/zpdf-cli/src/: convert.rs  main.rs
crates/zpdf-color/: Cargo.toml
crates/zpdf-color/src/: function.rs  icc.rs  lib.rs
crates/zpdf-color/src/testdata/: cmyk_lut.icc  gen_fixtures.py  gray_gamma22.icc  srgb.icc
crates/zpdf-content/: Cargo.toml
crates/zpdf-content/src/: interpreter.rs  lib.rs  mesh.rs  output_intent.rs  search.rs  shading.rs  tables.rs  text.rs  tokenizer.rs
crates/zpdf-content/tests/: form_state_balance.rs
crates/zpdf-core/: Cargo.toml
crates/zpdf-core/src/: color.rs  error.rs  geometry.rs  lib.rs  limits.rs  object.rs
crates/zpdf-display-list/: Cargo.toml
crates/zpdf-display-list/src/: lib.rs
crates/zpdf-document/: Cargo.toml
crates/zpdf-document/src/: annot_appearance.rs  annotation.rs  catalog.rs  destinations.rs  doc_info.rs  embedded_files.rs  font_loader.rs  forms.rs  ink.rs  lib.rs  measure.rs  obj_util.rs  optional_content.rs  outline.rs  output_intents.rs  page.rs  page_labels.rs  pdfa.rs  resolver.rs  signature.rs  structure.rs  trust.rs  xmp.rs
crates/zpdf-document/tests/: font_loader_indirect.rs
crates/zpdf-font/: Cargo.toml
crates/zpdf-font/src/: big5.rs  cmap.rs  encoding.rs  eucjp.rs  gb2312.rs  gbk.rs  glyph_list.rs  ksc.rs  lib.rs  sjis.rs  standard_fonts.rs  system.rs  type1.rs
crates/zpdf-font/tests/: variable_font.rs
crates/zpdf-font/tools/: gen_cjk_tables.py
crates/zpdf-image/: Cargo.toml
crates/zpdf-image/src/: lib.rs
crates/zpdf-image/src/testdata/: gray_linear.icc
crates/zpdf-image/tests/: jpx.rs
crates/zpdf-image/tests/fixtures/: gen_jpx_fixtures.py  gray.j2k  gray_ref.raw  rgb.jp2  rgb_lossy.jp2  rgb_lossy_ref.raw  rgb_ref.raw  rgba.jp2  rgba_ref.raw
crates/zpdf-parser/: Cargo.toml
crates/zpdf-parser/src/: ccitt.rs  crypt.rs  filters.rs  header.rs  jbig2.rs  lexer.rs  lib.rs  object_parser.rs  recovery.rs  xref.rs
crates/zpdf-render/: Cargo.toml
crates/zpdf-render-cpu/: Cargo.toml
crates/zpdf-render-cpu/src/: lib.rs
crates/zpdf-render-wgpu/: Cargo.toml
crates/zpdf-render-wgpu/examples/: simple-viewer.rs  viewer.rs
crates/zpdf-render-wgpu/src/: batch.rs  blend.rs  context.rs  glyph.rs  glyph_atlas.rs  image.rs  lib.rs  path.rs  pipelines.rs  record.rs  target.rs  timing.rs  transform.rs
crates/zpdf-render-wgpu/src/shaders/: composite.wgsl  glyph.wgsl  mask_apply.wgsl  solid.wgsl  textured.wgsl
crates/zpdf-render-wgpu/tests/: blend.rs  timing.rs
crates/zpdf-render/src/: dash.rs  lib.rs
crates/zpdf-viewer-gpui/: Cargo.toml  QUICKSTART.md  SELECTION_MODE.md  STAMP_FEATURE.md
crates/zpdf-viewer-gpui/src/: actions.rs  app.rs  document.rs  lib.rs  main.rs  viewer.rs
crates/zpdf-writer/: ANNOTATION_EDITING.md  Cargo.toml  README.md
crates/zpdf-writer/examples/: builder_demo.rs
crates/zpdf-writer/src/: annotate.rs  builder.rs  copier.rs  encrypt.rs  forms.rs  lib.rs  linearize.rs  merge.rs  metadata.rs  pages.rs  redact.rs  rewrite.rs  serialize.rs  sign.rs  stamp.rs  subset.rs
crates/zpdf-writer/tests/: annotate.rs  builder.rs  encrypt.rs  incremental.rs  merge.rs  redact.rs  rewrite.rs  sign.rs
crates/zpdf/examples/: dump_spans.rs
crates/zpdf/src/: conversion.rs  lib.rs
crates/zpdf/tests/: annotations_ocg.rs  conversion.rs  embedded_files.rs  forms.rs  gpu_acceptance.rs  gpu_overprint.rs  gpu_softmask.rs  inline_image.rs  jbig2_image.rs  jpx_image.rs  markup_annotations.rs  mesh_shading.rs  minimal_pdf.rs  navigation.rs  nchannel.rs  output_intents.rs  overprint.rs  pattern_tiling.rs  quartz_cff_fonts.rs  shading_clip.rs  signatures.rs  soft_mask.rs  struct_text.rs  structure.rs  text_extraction.rs  variable_font_pdf.rs
crates/zpdf/tests/common/: mod.rs
docs/: CHANGELOG.md  library.md  user-guide.md
docs/review/: IMPLEMENTATION_STATUS.md  REPAIR_AUDIT_REVISION_2026_07_13.md  SECURITY-AUDIT-2026-07-10.md  SECURITY_AUDIT_SESSION_1_COMPLETE.md  SECURITY_AUDIT_SUMMARY.md
fuzz/: Cargo.toml  DELIVERY.md  README.md
fuzz/fuzz_targets/: content_tokenizer.rs  filters.rs  lexer.rs  object_parser.rs  parse_pdf.rs
tests/: corpus-report.md  corpus_run.sh
