[workspace]
resolver = "2"
members = [
    "crates/zpdf",
    "crates/zpdf-core",
    "crates/zpdf-parser",
    "crates/zpdf-document",
    "crates/zpdf-content",
    "crates/zpdf-display-list",
    "crates/zpdf-font",
    "crates/zpdf-image",
    "crates/zpdf-color",
    "crates/zpdf-render",
    "crates/zpdf-render-cpu",
    "crates/zpdf-render-wgpu",
    "crates/zpdf-viewer-gpui",
    "crates/zpdf-cli",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["zpdf contributors"]

[workspace.dependencies]
# internal
zpdf-core = { path = "crates/zpdf-core", version = "0.1.0" }
zpdf-parser = { path = "crates/zpdf-parser", version = "0.1.0" }
zpdf-document = { path = "crates/zpdf-document", version = "0.1.0" }
zpdf-content = { path = "crates/zpdf-content", version = "0.1.0" }
zpdf-display-list = { path = "crates/zpdf-display-list", version = "0.1.0" }
zpdf-font = { path = "crates/zpdf-font", version = "0.1.0" }
zpdf-image = { path = "crates/zpdf-image", version = "0.1.0" }
zpdf-color = { path = "crates/zpdf-color", version = "0.1.0" }
zpdf-render = { path = "crates/zpdf-render", version = "0.1.0" }
zpdf-render-cpu = { path = "crates/zpdf-render-cpu", version = "0.1.0" }
zpdf-render-wgpu = { path = "crates/zpdf-render-wgpu", version = "0.1.0" }
zpdf = { path = "crates/zpdf", version = "0.1.0", default-features = false }

# external
thiserror = "2"
tracing = "0.1"
smallvec = "1"
bitflags = "2"
bytemuck = { version = "1", features = ["derive"] }
winnow = "0.7"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
# Pure-Rust crypto (RustCrypto) for the Standard security handler's AES paths.
# NB: cbc 0.1 is the release that matches aes 0.8 (both speak `cipher` 0.4).
aes = "0.8"
cbc = "0.1"
sha2 = "0.10"
zune-jpeg = "0.5"
# Pure-Rust JPEG 2000 decoder (JPXDecode) from the hayro PDF renderer family.
# Hand-written, #![forbid(unsafe_code)] at the crate level; the optional `simd`
# feature (fearless_simd, also pure Rust) is the only unsafe. No C toolchain.
hayro-jpeg2000 = { version = "0.3.5", default-features = false, features = ["std", "simd"] }
image = { version = "0.25", default-features = false, features = ["png"] }
wgpu = "29"
lyon = "1"
pollster = "0.4"
tiny-skia = "0.11"
ttf-parser = "0.25"
gpui = { git = "https://github.com/zed-industries/zed.git", rev = "d989c7c5cdd057de2375a55bdc109ff61409801c", package = "gpui", default-features = false }
gpui_platform = { git = "https://github.com/zed-industries/zed.git", rev = "d989c7c5cdd057de2375a55bdc109ff61409801c", package = "gpui_platform", default-features = false }
