[package]
name = "zpdf-cli"
description = "Command-line tool for zpdf: info, dump, render, text, compare"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true

[[bin]]
name = "zpdf"
path = "src/main.rs"

[features]
default = ["cpu"]
cpu = ["zpdf/cpu-render"]
gpu = ["zpdf/gpu-render"]

[dependencies]
zpdf = { workspace = true, default-features = false }
# Direct CLI dep (NOT feature-gated): compare/text/render use image::open/RgbaImage.
image.workspace = true
