[package]
name = "zpdf-color"
description = "PDF color spaces: DeviceRGB/CMYK/Gray, ICC, Lab, Indexed"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zpdf-core.workspace = true
moxcms.workspace = true
tracing.workspace = true
