[package]
name = "zpdf-core"
description = "Core types for zpdf: PDF object model, geometry, errors"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
thiserror.workspace = true
smallvec.workspace = true
