[package]
name = "zpdf-display-list"
description = "Render-backend-agnostic display list: paths, text, images, clips"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zpdf-core.workspace = true
smallvec.workspace = true
