[package]
name = "zpdf-document"
description = "PDF document model: catalog, page tree, resource inheritance"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zpdf-core.workspace = true
zpdf-parser.workspace = true
zpdf-font.workspace = true
tracing.workspace = true
# Pure-Rust digests (RustCrypto) for signature byte-range integrity checks.
sha1.workspace = true
sha2.workspace = true
