[package]
name = "zpdf-document"
description = "PDF document model: catalog, page tree, resource inheritance"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zpdf-core.workspace = true
zpdf-parser.workspace = true
zpdf-font.workspace = true
tracing.workspace = true
# Pure-Rust digests (RustCrypto) for signature byte-range integrity checks.
# The `oid` feature lets these serve as the RSA PKCS#1 v1.5 DigestInfo hash.
sha1 = { workspace = true, features = ["oid"] }
sha2 = { workspace = true, features = ["oid"] }
# Pure-Rust public-key verification for CMS signer signatures.
rsa.workspace = true
p256.workspace = true
p384.workspace = true
