[package]
name = "zpdf-parser"
description = "PDF file parser: lexer, objects, xref, trailer, stream filters"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zpdf-core.workspace = true
# DeviceCMYK->sRGB conversion for the Adobe-YCCK JPEG decode arm (the one place
# the filter pipeline must do colour conversion, since zune-jpeg has no working
# YCCK arm). zpdf-color depends only on zpdf-core, so this adds no cycle.
zpdf-color.workspace = true
winnow.workspace = true
flate2.workspace = true
zune-jpeg.workspace = true
tracing.workspace = true
aes.workspace = true
cbc.workspace = true
sha2.workspace = true

[dev-dependencies]
# Pure-Rust LZW codec (the backend used by the `tiff`/`gif` crates). Used ONLY
# in tests as an independent, spec-conformant reference encoder so the LZW
# decoder is validated against an external producer, not its own paired encoder.
weezl = "0.1"
