[package]
name = "zpdf-render-wgpu"
description = "wgpu GPU-accelerated renderer for zpdf"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
zpdf-core.workspace = true
zpdf-display-list.workspace = true
zpdf-render.workspace = true
wgpu.workspace = true
lyon.workspace = true
bytemuck.workspace = true
tracing.workspace = true
thiserror.workspace = true
