[package]
name = "zpdf-render-wgpu"
description = "wgpu GPU-accelerated renderer for zpdf"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zpdf-core.workspace = true
zpdf-display-list.workspace = true
zpdf-render.workspace = true
zpdf-font.workspace = true        # LoadedFont/GlyphOutline (glyph atlas, Type3)
zpdf-image.workspace = true       # ImageCache/DecodedImage (image textures)
zpdf-content.workspace = true     # ContentInterpreter (Type3 char-procs)
wgpu.workspace = true
lyon.workspace = true
bytemuck.workspace = true
tiny-skia.workspace = true        # pure-Rust glyph-coverage raster (AA parity)
pollster.workspace = true         # block_on for headless device/readback
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
# Workspace siblings are PATH-ONLY here (no version) so cargo strips them
# from the published package — the facade's dev-dep would otherwise form a
# publish cycle (zpdf → zpdf-render-wgpu → dev → zpdf).
# CPU backend is the oracle for blend-group parity tests (built programmatically,
# since the content interpreter does not yet emit PushBlendGroup ops).
zpdf-render-cpu = { path = "../zpdf-render-cpu" }
# Facade (parsing pipeline only) + winit for the simple viewer example.
# winit stays a dev-dependency so headless library/CLI builds never link a windowing stack.
zpdf = { path = "../zpdf", default-features = false }
winit = "0.30"
pollster.workspace = true

[[example]]
name = "simple-viewer"
