[package]
name = "zpdf"
description = "Pure Rust PDF parsing library with wgpu GPU rendering"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["cpu-render"]
cpu-render = ["dep:zpdf-render-cpu"]
gpu-render = ["dep:zpdf-render-wgpu"]

[dependencies]
zpdf-core.workspace = true
zpdf-parser.workspace = true
zpdf-document.workspace = true
zpdf-content.workspace = true
zpdf-display-list.workspace = true
zpdf-font.workspace = true
zpdf-image.workspace = true
zpdf-color.workspace = true
zpdf-render.workspace = true
zpdf-render-cpu = { workspace = true, optional = true }
zpdf-render-wgpu = { workspace = true, optional = true }
zpdf-writer.workspace = true

[dev-dependencies]
# Pure-Rust zlib (rust_backend, no C deps) for building FlateDecode-compressed
# embedded-file fixtures in the attachments end-to-end tests.
flate2.workspace = true
# Pure-Rust SHA-256 for computing the signed byte-range digest in the digital
# signature end-to-end tests.
sha2.workspace = true
# Pure-Rust public-key crypto for *producing* real signed CMS blobs in the
# digital-signature crypto-verification tests (mirrors the verify-side deps).
rsa.workspace = true
p256.workspace = true
rand_chacha = "0.3"
